[#14027] Split giver and instructor comment models (#14030)